--- a/Team_Rudra-main/vehicle.css
+++ b/Team_Rudra-main/vehicle.css
@@ -150,6 +150,7 @@ border-radius: 2px;
 color: white;
 justify-content: center;
 text-align: center;
+font-size: 2.2rem;
 margin-bottom: 30px;
 padding-bottom: 50px;
 padding-top: 20px;
@@ -178,7 +179,7 @@ padding-top: 20px;
   justify-content: space-around;
   margin-top: 10px;
   font-size: 14px;
-  color: white
+  color: rgb(12, 12, 12)
 }
 
 .info-btn {
@@ -203,7 +204,7 @@ padding-top: 20px;
   width: 400px;
   padding: 16px;
   border-radius: 10px;
-  background: rgb(156, 157, 84);
+  background: rgb(255, 255, 255);
   box-shadow: 0 0 1px rgba(0,0,0,0.1);
   transition: all 0.3s ease;
   text-align: center;
@@ -223,7 +224,7 @@ padding-top: 20px;
   animation: fadeIn 0.5s ease forwards;
   text-align: left;
   font-size: 15px;
-  color: white;
+  color: rgb(10, 10, 10);
   line-height: 1.6;
   padding-top: 10px;
 }
@@ -272,7 +273,7 @@ padding-top: 20px;
   animation: fadeIn 0.3s ease-in-out;
   font-size: 15px;
   line-height: 1.6;
-  color:white;
+  color:rgb(14, 13, 13);
   margin-top: 10px;
 }
 
